--- a/style.css
+++ b/style.css
@@ -8,6 +8,22 @@ html, body {
   background: radial-gradient(circle at top, #0a0a0a 0%, #000 100%);
 }
 
+
+button{
+    
+    border-radius: 10px;
+    padding: 20px;
+    margin: 40px;
+      background-color: #00bfa5;
+    color: #000;
+    
+    
+}
+button:hover{
+    background-color: darkgreen;
+    color:white
+}
+
 /* Container */
 .container {
   max-width: 900px;
